--- a/FoodInspectCustomer/Base.lproj/Main.storyboard
+++ b/FoodInspectCustomer/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Home-->
@@ -16,25 +18,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xgq-e9-jJE">
-                                <rect key="frame" x="241" y="118" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xgq-e9-jJE">
+                                <rect key="frame" x="305" y="119" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Sdt-Nh-g7t"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Number of Rows:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wP-hs-8om">
-                                <rect key="frame" x="101" y="122" width="132" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="237" translatesAutoresizingMaskIntoConstraints="NO" id="vOJ-Va-h70">
-                                <rect key="frame" x="101" y="365" width="237" height="50"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="237" translatesAutoresizingMaskIntoConstraints="NO" id="vOJ-Va-h70">
+                                <rect key="frame" x="154" y="374" width="237" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="aIm-LU-jpy"/>
+                                    <constraint firstAttribute="width" constant="237" id="vWF-Ec-ADr"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rKl-Tl-WTQ">
-                                <rect key="frame" x="119" y="181" width="201" height="44"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rKl-Tl-WTQ">
+                                <rect key="frame" x="172" y="190" width="201" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="201" id="0e1-ID-k9o"/>
+                                    <constraint firstAttribute="height" constant="44" id="fmB-fW-H07"/>
+                                </constraints>
                                 <state key="normal" title="Show Table Alert">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -42,8 +49,24 @@
                                     <action selector="showTableAlert:" destination="9pv-A4-QxB" eventType="touchUpInside" id="uOg-FF-Zxd"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="247" text="Number of Rows:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wP-hs-8om">
+                                <rect key="frame" x="163" y="123" width="134" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rKl-Tl-WTQ" firstAttribute="centerX" secondItem="vOJ-Va-h70" secondAttribute="centerX" id="5bJ-KN-rPn"/>
+                            <constraint firstItem="rKl-Tl-WTQ" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="top" constant="190" id="7JL-yy-X5p"/>
+                            <constraint firstItem="Xgq-e9-jJE" firstAttribute="leading" secondItem="1wP-hs-8om" secondAttribute="trailing" constant="8" id="AXR-5h-2IB"/>
+                            <constraint firstItem="rKl-Tl-WTQ" firstAttribute="top" secondItem="Xgq-e9-jJE" secondAttribute="bottom" constant="41" id="BX1-zm-d9e"/>
+                            <constraint firstAttribute="centerX" secondItem="rKl-Tl-WTQ" secondAttribute="centerX" constant="27.5" id="FJE-Jb-Blq"/>
+                            <constraint firstAttribute="centerX" secondItem="Xgq-e9-jJE" secondAttribute="centerX" constant="-55" id="IEL-wc-mLv"/>
+                            <constraint firstItem="Xgq-e9-jJE" firstAttribute="baseline" secondItem="1wP-hs-8om" secondAttribute="firstBaseline" constant="-1" id="Qco-xV-iri"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="vOJ-Va-h70" secondAttribute="bottom" constant="129" id="VkX-3f-4Xb"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="first" id="acW-dT-cKf"/>
                     <connections>
